[package]
name = "RND"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.17.0", features = ["full"]}
magic-crypt = "3.1.10"
uuid = {version = "0.8", features = ["v4", "getrandom"]}
serde = { version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
anyhow = "1.0.56"
ristretto255-dh = "0.3.0"
rand_core = "0.5.1"
zstd = "0.11.1+zstd.1.5.2"
async-trait = "0.1.53"
